--- a/new.html.html
+++ b/new.html.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Birthday</title>
+  <title>Greetings From Gani</title>
   <link rel="stylesheet" href="new.css" />
 </head>
 
@@ -38,7 +38,7 @@
     </div>
   </div>
   <footer>
-    <p>crafted by Ganesh.</p>
+    <p>crafted by Gani</p>
   </footer>
 </body>
 
