--- a/new.html.html
+++ b/new.html.html
@@ -16,7 +16,7 @@
       <div class="letter"></div>
       <p>
         <span>To the beautiful MUSE,</span>
-        <br />
+        <!-- <br />
         Happy Birthday to the one who melts my heart 💖 even on the coldest of days!
         On this special day, I compare you to a rose — each petal symbolizing my admiration for you.
         Your presence fills my world with joy and warmth. Like a rose in full bloom, your beauty captivates my heart.
@@ -25,6 +25,20 @@
         Thank you for being my endless source of love and inspiration.
         Our journey together is as sweet as the fragrance of roses.
         Once again, Happy Birthday, my enchantress.
+        Love you 3000. 🫴💕
+        <br /> -->
+        <br />
+        To the one who melts my heart 💖 even on the coldest of days—
+        Every moment with you feels like a beautiful dream I never want to wake up from.
+        I compare you to a rose — each petal symbolizing my admiration, respect, and growing love for you.
+        Your presence fills my world with warmth, and like a rose in full bloom, your beauty captivates my soul.
+        The red roses reflect the passion I feel for you, while the white ones signify the sincerity and purity of my
+        feelings.
+        In the garden of life, you are my most cherished blossom.
+        You've become my endless source of inspiration, comfort, and joy.
+        Our moments together are as sweet as the fragrance of roses, and I want to keep blooming by your side forever.
+        So here I am, with all my heart…
+        Will you be mine? 💖
         Love you 3000. 🫴💕
         <br />
         <span class="ullu">
