--- a/new.html.html
+++ b/new.html.html
@@ -16,18 +16,18 @@
       <div class="letter"></div>
       <p>
         <span>To the beautiful MUSE,</span>
-        <!-- <br />
+        <br />
         Happy Birthday to the one who melts my heart 💖 even on the coldest of days!
         On this special day, I compare you to a rose — each petal symbolizing my admiration for you.
         Your presence fills my world with joy and warmth. Like a rose in full bloom, your beauty captivates my heart.
-        The red roses reflect the passion that burns for you, while the white ones signify the purity of our love.
+        The red roses reflect the passion that burns for you, while the white ones signify the purity of your love.
         In the garden of life, you're my most cherished blossom.
-        Thank you for being my endless source of love and inspiration.
+        Thank you for being such a wonderful source of inspiration and positivity
         Our journey together is as sweet as the fragrance of roses.
         Once again, Happy Birthday, my enchantress.
         Love you 3000. 🫴💕
-        <br /> -->
         <br />
+        <!-- <br />
         To the one who melts my heart 💖 even on the coldest of days—
         Every moment with you feels like a beautiful dream I never want to wake up from.
         I compare you to a rose — each petal symbolizing my admiration, respect, and growing love for you.
@@ -38,7 +38,7 @@
         So here I am, with all my heart…
         Will you be mine? 💖
         Love you 3000. 🫴💕
-        <br />
+        <br /> -->
         <span class="ullu">
           Forever Yours,
           <br />
