--- a/new.html.html
+++ b/new.html.html
@@ -22,6 +22,8 @@
         Your presence fills my world with joy and warmth. Like a rose in full bloom, your beauty captivates my heart.
         The red roses reflect the passion that burns for you, while the white ones signify the purity of your love.
         In the garden of life, you're my most cherished blossom.
+        You are beautiful,care, gentle, idiotically and deliciously faminine wonderfully intelligent and
+        wonderfully silly as well
         Thank you for being such a wonderful source of inspiration and positivity
         Our journey together is as sweet as the fragrance of roses.
         Once again, Happy Birthday, my enchantress.
