--- a/new.html.html
+++ b/new.html.html
@@ -18,15 +18,21 @@
         <span>To the beautiful MUSE,</span>
         <br />
         Happy Birthday to the one who melts my heart 💖 even on the coldest of days!
+        To the one whos been a radiant light in my life from last few years. Even when things are distant, the warmth of
+        your
+        presence still lingers in my heart. 🌹
         On this special day, I compare you to a rose — each petal symbolizing my admiration for you.
-        Your presence fills my world with joy and warmth. Like a rose in full bloom, your beauty captivates my heart.
+        <!-- Your presence fills my world with joy and warmth.  -->
+        Like a rose in full bloom, your beauty captivates my heart.
         The red roses reflect the passion that burns for you, while the white ones signify the purity of your love.
         In the garden of life, you're my most cherished blossom.
         You are beautiful,care, gentle, idiotically and deliciously faminine wonderfully intelligent and
         wonderfully silly as well
-        Thank you for being such a wonderful source of inspiration and positivity
-        Our journey together is as sweet as the fragrance of roses.
-        Once again, Happy Birthday, my enchantress.
+        Thank you for being such a wonderful source of inspiration and
+        Thank you for the inspiration you’ve unknowingly given me all these years. I hope this birthday brings you all
+        the love and joy you deserve.
+        <!-- Our journey together is as sweet as the fragrance of roses. -->
+        Wishing you happiness always, my enchantress.
         Love you 3000. 🫴💕
         <br />
         <!-- <br />
@@ -42,7 +48,8 @@
         Love you 3000. 🫴💕
         <br /> -->
         <span class="ullu">
-          Forever Yours,
+          <!-- Forever Yours, -->
+          Yours
           <br />
           Gani</span>
       </p>
